tests/errors/parsing/010_missing_type_specifier.c
int main(void) {
    extern a;
}